--- a/src/main/resources/templates/kassza/kezdes.html
+++ b/src/main/resources/templates/kassza/kezdes.html
@@ -30,16 +30,17 @@
         }
 
         body {
-            background-color: lightskyblue;
+            background-color: whitesmoke;
         }
     </style>
 
 </head>
-<h1>
-    Vásárlás kezdéséhez nyomja meg a gombot
-</h1>
 
 <body>
+<h1 style="text-align: center; background-color: darkblue; color: white; height: 55px; padding-top: 5px">Üdvözöljük!</h1>
+<h2 style="position: fixed; bottom: 50px;left: 450px;font-size: 30px; color: darkblue">
+    Vásárlás kezdéséhez nyomja meg a gombot
+</h2>
 <div class="kep">
     <a href="kassza.html" th:href="@{/kassza/kassza}">
         <img src="../../images/kassza/images.png" th:src="@{/images/kassza/images.png}" alt="">
