--- a/src/main/resources/templates/kassza/visszaigazolas.html
+++ b/src/main/resources/templates/kassza/visszaigazolas.html
@@ -5,21 +5,8 @@
     <title>Sikeres Vásárlás</title>
 </head>
 <body>
-<h1 style="text-align: center">
-    Sikeres Vásárlás !
-</h1>
-<ul>
-    <li>Tranzakció azonosító:
-        <script>document.write(Math.random() * 1000000000000000000)</script>
-        <br>
-    </li>
-    <li>Idő:
-        <script> document.write(new Date().toLocaleDateString());</script>
-        <script> document.write(new Date().toLocaleTimeString());</script>
-    </li>
-</ul>
 <form action="szamla.html">
-    <input type="submit" value="Számlához">
+    <input type="submit" value="Köszönjük hogy nálunk vásárolt!" class="button-76" style="position: fixed;">
 </form>
 </body>
 </html>
