--- a/src/main/resources/templates/kassza/raktar.html
+++ b/src/main/resources/templates/kassza/raktar.html
@@ -7,12 +7,60 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Raktár</title>
+    <style>
+        .list-group{
+            margin-bottom: 10px;
+            overflow-y: scroll;
+            overflow-x: hidden;
+            height: 470px;
+            width: auto;
+        }
+
+        .button-76 {
+            border-radius: 8px;
+            bottom: 0;
+            right: 0;
+            background-color: whitesmoke;
+            border: 0;
+            border-radius: .25rem;
+            box-sizing: border-box;
+            color: black;
+            cursor: pointer;
+            font-family: Helvetica;
+            font-size: 1.125rem; /* 18px */
+            font-weight: 600;
+            line-height: 1.75rem; /* 28px */
+            padding: 1rem 1.25rem;
+            text-align: center;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+        }
+        .button-76:disabled{
+            background-color: whitesmoke;
+        }
+
+        .button-76:hover:enabled {
+            background-color: darkblue;
+            color: white;
+        }
+
+        @media (min-width: 1024px) {
+            .button-76 {
+                font-size: 1.5rem; /* 24px */
+                padding: 1rem 1.5rem;
+                line-height: 2rem; /* 32px */
+            }
+        }
+    </style>
 </head>
 <body>
+<h1 style="text-align: center; background-color: whitesmoke; color: black; height: 55px; padding-top: 5px">Raktár</h1>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-<table class="table table-dark table-striped">
+<div class="list-group">
+<table class="table table-striped">
     <thead>
     <tr>
         <th scope="col">Id</th>
@@ -26,7 +74,7 @@
     <tbody>
     <tr th:each="item : ${allItem}">
         <th scope="row" th:text="${item.id}">0</th>
-        <td th:text="${item.megnevezes}">Név</td>nev
+        <td th:text="${item.megnevezes}">Név</td>
         <td th:text="${item.ar}">100</td>
         <td th:text="${item.mennyiseg}">Tipus</td>
         <td th:text="${item.vonalkod}">Tipus</td>
@@ -43,6 +91,7 @@
     </tr>
     </tbody>
 </table>
+</div>
 <h3 th:if="${formItem.id == null}">Termék hozzáadása</h3>
 <h3 th:if="${formItem.id != null}">Termék módosítása</h3>
 <form th:action="@{'/kassza/raktar/{id}' (id=${formItem.id})}"
@@ -63,7 +112,7 @@
     </div>
     <div class="col">
         <label>
-            <input type="text"
+            <input type="number"
                    class="form-control"
                    placeholder="Ár"
                    th:field="*{ar}"
@@ -77,7 +126,8 @@
     </div>
     <div class="col">
         <label>
-            <input type="text"
+            <input type="number"
+                   maxlength="3"
                    class="form-control"
                    placeholder="Mennyiseg"
                    th:field="*{mennyiseg}"
@@ -110,7 +160,7 @@
 </form>
 <form th:action="@{/}" style="padding-top: 2%">
     <div id="back-button" class="position-relative" style="text-align: center">
-        <button class="btn btn-primary btn-lg" type="submit">VISSZA</button>
+        <button class="button-76" style="position: fixed; bottom: 0; width: 400px; left: 550px;" type="submit">VISSZA</button>
     </div>
 </form>
 </div>
