--- a/src/main/resources/templates/kassza/szamla.html
+++ b/src/main/resources/templates/kassza/szamla.html
@@ -4,46 +4,81 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
+
+    <style>
+        .button-76 {
+            border-radius: 8px;
+            bottom: 0;
+            right: 0;
+            background-color: darkblue;
+            border: 0;
+            border-radius: .25rem;
+            box-sizing: border-box;
+            color: #fff;
+            cursor: pointer;
+            font-family: Helvetica;
+            font-size: 1.125rem; /* 18px */
+            font-weight: 600;
+            line-height: 1.75rem; /* 28px */
+            padding: 1rem 1.25rem;
+            text-align: center;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+        }
+        .button-76:disabled{
+            background-color: whitesmoke;
+        }
+
+        .button-76:hover:enabled {
+            background-color: red;
+        }
+
+        @media (min-width: 1024px) {
+            .button-76 {
+                font-size: 1.5rem; /* 24px */
+                padding: 1rem 1.5rem;
+                line-height: 2rem; /* 32px */
+            }
+        }
+
+        .list-group{
+            margin-top: -10px;
+            overflow-y: scroll;
+            overflow-x: hidden;
+            height: 500px;
+            width: auto;
+        }
+    </style>
+    <!-- Bootstrap CSS    -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Számla</title>
 </head>
-<body>
+<body style="margin-left: 280px; margin-right: 280px; position: relative;font-family: sans-serif; border-right: 3px solid black; border-left: 3px solid black; height: 750px">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-<h1>Számla</h1>
-<div class="col-8">
-<table class="table table-striped">
-    <tbody>
-    <tr>
-        <td>Nev</td>
-        <td>Ár</td>
-        <td>Mennyiseg</td>
-        <td>Összesen</td>
-    </tr>
-    <tr th:each="item : ${kosar.termekMennyisegDtoList}">
+<h1 style="text-align: center;background-color: whitesmoke; padding: 20px 20px">Számla</h1>
+<div class="list-group">
+<table class="table" style="height: 400px">
+    <tbody style="font-size: 30px">
+    <tr th:each="item : ${kosar.termekMennyisegDtoList}" style="height: 50px">
         <td th:text="${item.nev}">Név</td>
-        <td th:text="${item.ar}">100</td>
-        <td th:text="${item.mennyiseg}">Mennyiseg</td>
+        <td th:text="${item.ar}+'Ft'">100</td>
+        <td th:text="${item.mennyiseg}"+'Db'>Mennyiseg</td>
         <td th:text="${item.mennyiseg}*${item.ar}" style="text-align: center">Összesen</td>
-
     </tr>
     </tbody>
 </table>
-<div class="col-2"></div>
-</div>
-</div>
-<div class="col-7" style="background-color: yellow; border: 3px black" th:text="'Végösszeg: '+${kosar.vegosszeg}+'Ft'" >
+<div style="border-top: 3px solid black; background-color: whitesmoke;font-size: 80px; text-align: center;position: fixed; bottom: 0;left: 283px; width: 972px; height: 150px" th:text="'Végösszeg: '+${kosar.vegosszeg}+'Ft'" >
     Végösszeg: 0 Ft
 </div>
 <form th:action="@{'/kassza/{kosarId}'(kosarId=${kosar.kosarId})}">
-    <input type="submit" value="Vissza">
+    <input type="submit" class="button-76" style="position: fixed; bottom: 0;left: 0; top:0; width: 280px;" value="Vissza">
 </form>
-<input type="submit" class="btn btn-success" value="Fizetés készpénzzel"/>
-<input type="submit" class="btn btn-danger" value="Fizetés bankkártyával"/>
+<form th:action="@{'/kassza/bankkartyaUrlap/{kosarId}'(kosarId=${kosar.kosarId})}">
+    <input type="submit" class="button-76" style="position: fixed;bottom: 0;right: 0; top:0; width: 280px;"   value="Fizetés"/>
+</form>
+</div>
 </body>
-<footer style="font-size: 14px">
-    Verzio: 1.0
-</footer>
 </html>
