--- a/src/main/resources/templates/kassza/bankkartyaUrlap.html
+++ b/src/main/resources/templates/kassza/bankkartyaUrlap.html
@@ -62,7 +62,7 @@
 <div style="position: fixed; left: 180px; right: auto;">
 <p class="example"></p>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<form th:action="@{/kassza/szamla}" class="row g-3 needs-validation" novalidate style="width: 1500px">
+<form th:action="@{'/kassza/befejezes/{kosarId}'(kosarId=${kosar.kosarId})}" class="row g-3 needs-validation" novalidate style="width: 1500px; height: 500px">
     <div class="col-md-4">
         <label for="validationCustom01" class="form-label">Vezetéknév</label>
         <input type="text" class="form-control" id="validationCustom01" value="írd ide a vezetékneved" pattern="^[^0-9]{0,30}$" required>
@@ -115,20 +115,17 @@
             </div>
         </div>
     </div>
+    <div>
+        <input type="submit" class="button-76" style="position: fixed; bottom: 0;right: 0; width: 280px; height: 150px" value="Fizetés">
+    </div>
 </form>
 </div>
     <br>
 <div style="vertical-align: middle">
-    <div style="position: fixed; left:430px; bottom: 200px">
+    <div style="position: fixed; left:430px; bottom: 10px">
 <img th:src="@{/images/kassza/fizetes.jpg}" style="width: 600px">
     </div>
 </div>
-<div style="position: fixed; bottom: 0;right: 0">
-    <button class="btn btn-primary" href="szamla.html" th:href="@{/kassza/szamla}"type="submit">Vásárlás</button>
-</div>
-<form th:action="@{'/kassza/befejezes/{kosarId}'(kosarId=${kosar.kosarId})}">
-    <input type="submit" class="button-76" style="position: fixed; bottom: 0;right: 0; width: 280px; height: 150px" value="Fizetés">
-</form>
 <form th:action="@{'/kassza/szamla/{kosarId}'(kosarId=${kosar.kosarId})}">
     <input type="submit" class="button-76" style="position: fixed;bottom: 0;left: 0; width: 280px; height: 150px"   value="Vissza"/>
 </form>
