--- a/src/main/resources/templates/kassza/szamla.html
+++ b/src/main/resources/templates/kassza/szamla.html
@@ -6,6 +6,43 @@
 
 
     <style>
+        .button-75 {
+            border-radius: 8px;
+            bottom: 0;
+            right: 0;
+            background-color: darkblue;
+            border: 0;
+            border-radius: .25rem;
+            box-sizing: border-box;
+            color: #fff;
+            cursor: pointer;
+            font-family: Helvetica;
+            font-size: 1.125rem; /* 18px */
+            font-weight: 600;
+            line-height: 1.75rem; /* 28px */
+            padding: 1rem 1.25rem;
+            text-align: center;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+        }
+        .button-75:disabled{
+            background-color: whitesmoke;
+        }
+
+        .button-75:hover:enabled {
+            background-color: #ffb700;
+            color: black;
+        }
+
+        @media (min-width: 1024px) {
+            .button-75 {
+                font-size: 1.5rem; /* 24px */
+                padding: 1rem 1.5rem;
+                line-height: 2rem; /* 32px */
+            }
+        }
+
         .button-76 {
             border-radius: 8px;
             bottom: 0;
@@ -36,6 +73,79 @@
 
         @media (min-width: 1024px) {
             .button-76 {
+                font-size: 1.5rem; /* 24px */
+                padding: 1rem 1.5rem;
+                line-height: 2rem; /* 32px */
+            }
+        }
+
+        .button-77 {
+            border-radius: 8px;
+            bottom: 0;
+            right: 0;
+            background-color: darkblue;
+            border: 0;
+            border-radius: .25rem;
+            box-sizing: border-box;
+            color: #fff;
+            cursor: pointer;
+            font-family: Helvetica;
+            font-size: 1.125rem; /* 18px */
+            font-weight: 600;
+            line-height: 1.75rem; /* 28px */
+            padding: 1rem 1.25rem;
+            text-align: center;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+        }
+        .button-77:disabled{
+            background-color: whitesmoke;
+        }
+
+        .button-77:hover:enabled {
+            background-color: green;
+        }
+
+        @media (min-width: 1024px) {
+            .button-77 {
+                font-size: 1.5rem; /* 24px */
+                padding: 1rem 1.5rem;
+                line-height: 2rem; /* 32px */
+            }
+        }
+
+        .button-78 {
+            border-radius: 8px;
+            bottom: 0;
+            right: 0;
+            background-color: white;
+            border: 0;
+            border-radius: .25rem;
+            box-sizing: border-box;
+            color: black;
+            cursor: pointer;
+            font-family: Helvetica;
+            font-size: 1.125rem; /* 18px */
+            font-weight: 600;
+            line-height: 1.75rem; /* 28px */
+            padding: 1rem 1.25rem;
+            text-align: center;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+        }
+        .button-78:disabled{
+            background-color: whitesmoke;
+        }
+
+        .button-78:hover:enabled {
+            background-color: red;
+            color: white;
+        }
+
+        @media (min-width: 1024px) {
+            .button-78 {
                 font-size: 1.5rem; /* 24px */
                 padding: 1rem 1.5rem;
                 line-height: 2rem; /* 32px */
@@ -74,11 +184,14 @@
     Végösszeg: 0 Ft
 </div>
 <form th:action="@{'/kassza/{kosarId}'(kosarId=${kosar.kosarId})}">
-    <input type="submit" class="button-76" style="position: fixed; bottom: 0;left: 0; top:0; width: 280px;" value="Vissza">
+    <input type="submit" class="button-75" style="position: fixed; bottom: 0;left: 0; top:0; width: 280px;" value="Vissza">
 </form>
-<form th:action="@{'/kassza/bankkartyaUrlap/{kosarId}'(kosarId=${kosar.kosarId})}">
-    <input type="submit" class="button-76" style="position: fixed;bottom: 0;right: 0; top:0; width: 280px;"   value="Fizetés"/>
-</form>
+    <form th:action="@{'/kassza/keszpenzesfizetes/{kosarId}'(kosarId=${kosar.kosarId})}">
+        <input type="submit" class="button-77" style="position: fixed;bottom: 50%;right: 0; top:0; width: 280px;"   value="Fizetés készpénzel"/>
+    </form>
+    <form th:action="@{'/kassza/bankkartyaUrlap/{kosarId}'(kosarId=${kosar.kosarId})}">
+        <input type="submit" class="button-78" style="position: fixed;top: 50%;right: 0; bottom:0; width: 280px;"   value="Fizetés bankkártyával"/>
+    </form>
 </div>
 </body>
 </html>
