--- a/src/main/resources/templates/kassza/kassza.html
+++ b/src/main/resources/templates/kassza/kassza.html
@@ -336,7 +336,7 @@
             Végösszeg: 0 Ft
         </div>
 
-        <div class="col-1">
+        <div class="lower">
         </div>
         <div class="col-2" style="text-align: center; font-size: 30px">
             <form th:action="@{'/kassza/fizetes/{kosarId}'(kosarId=${kosar.kosarId})}" method="get">
