--- a/src/main/resources/templates/kassza/bankkartyaUrlap.html
+++ b/src/main/resources/templates/kassza/bankkartyaUrlap.html
@@ -65,14 +65,14 @@
 <form th:action="@{'/kassza/befejezes/{kosarId}'(kosarId=${kosar.kosarId})}" class="row g-3 needs-validation" novalidate style="width: 1500px; height: 500px">
     <div class="col-md-4">
         <label for="validationCustom01" class="form-label">Vezetéknév</label>
-        <input type="text" class="form-control" id="validationCustom01" value="írd ide a vezetékneved" pattern="^[^0-9]{0,30}$" required>
+        <input type="text" class="form-control" id="validationCustom01" value="" pattern="^[^0-9]{0,30}$" required>
         <div class="valid-feedback">
             Oké!
         </div>
     </div>
     <div class="col-md-5">
         <label for="validationCustom02" class="form-label">Keresztnév</label>
-        <input type="text" class="form-control" id="validationCustom02" value="írd ide a keresztneved" pattern="^[^0-9]{0,30}$" required>
+        <input type="text" class="form-control" id="validationCustom02" value="" pattern="^[^0-9]{0,30}$" required>
         <div class="valid-feedback">
             Oké!
         </div>
