--- a/src/main/resources/templates/kassza/szamla.html
+++ b/src/main/resources/templates/kassza/szamla.html
@@ -164,7 +164,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Számla</title>
 </head>
-<body style="margin-left: 280px; margin-right: 280px; position: relative;font-family: sans-serif; border-right: 3px solid black; border-left: 3px solid black; height: 750px">
+<body style="margin-left: 280px; margin-right: 280px; position: relative;font-family: sans-serif; height: 750px">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
@@ -180,7 +180,7 @@
     </tr>
     </tbody>
 </table>
-<div style="border-top: 3px solid black; background-color: whitesmoke;font-size: 80px; text-align: center;position: fixed; bottom: 0;left: 283px; width: 972px; height: 150px" th:text="'Végösszeg: '+${kosar.vegosszeg}+'Ft'" >
+<div style="border-top: 3px solid black; background-color: whitesmoke;font-size: 80px; text-align: center;position: fixed; padding-top: 10px;bottom: 0;left: 283px; width: 972px; height: 150px" th:text="'Végösszeg: '+${kosar.vegosszeg}+'Ft'" >
     Végösszeg: 0 Ft
 </div>
 <form th:action="@{'/kassza/{kosarId}'(kosarId=${kosar.kosarId})}">
