--- a/src/main/resources/templates/kassza/raktar.html
+++ b/src/main/resources/templates/kassza/raktar.html
@@ -79,6 +79,9 @@
         <td th:text="${item.mennyiseg}">Tipus</td>
         <td th:text="${item.vonalkod}">Tipus</td>
         <td>
+            <img src="istockphoto-1206806317-170667a.jpg" th:src="@{'/kassza/raktar/{id}'(id=${item.id})}">
+        </td>
+        <td>
             <form style="text-align: right" th:action="@{'/kassza/raktar/{id}'(id=${item.id})}" method="get">
                 <input type="submit" class="btn btn-success edit-btn" value="Módosít"/>
             </form>
@@ -95,7 +98,7 @@
 <h3 th:if="${formItem.id == null}">Termék hozzáadása</h3>
 <h3 th:if="${formItem.id != null}">Termék módosítása</h3>
 <form th:action="@{'/kassza/raktar/{id}' (id=${formItem.id})}"
-      method="post" th:object="${formItem}" class="row">
+      method="post" th:object="${formItem}" class="row" enctype="multipart/form-data">
     <div class="col">
         <label>
             <input type="text"
@@ -153,6 +156,22 @@
             </div>
         </label>
     </div>
+
+        <div class="col" th:object="${kepFeltoltesCommand}" >
+            <label>
+                <input type="file"
+                       class="form-control-file"
+                       th:field="*{file}"
+                       th:classappend="${#fields.hasErrors('file')} ? 'is-invalid' : 'is-valid'"
+                >
+                <div class="invalid-feedback"
+                     th:if="${#fields.hasErrors('file')}"
+                     th:errors="*{file}">
+                    Hibaüzenet
+                </div>
+            </label>
+        </div>
+
     <div class="col">
         <input th:if="${formItem.id == null}" class="btn btn-primary" type="submit" value="Hozzáad"/>
         <input th:if="${formItem.id != null}" class="btn btn-primary" type="submit" value="Módosít"/>
