--- a/src/main/resources/templates/kassza/kassza.html
+++ b/src/main/resources/templates/kassza/kassza.html
@@ -145,7 +145,8 @@
             -webkit-user-select: none;
             touch-action: manipulation;
         }
-        .button-76:disabled{
+
+        .button-76:disabled {
             background-color: whitesmoke;
         }
 
@@ -219,15 +220,51 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1 style="text-align: center; background-color: darkblue; color: white; height: 55px; padding-top: 5px">Üdvözöljük!</h1>
-<h2 style="position: fixed; bottom: 165px; color: darkblue; font-size: 31px">Kérjük olvassa le a Terméket, vagy válasszon a listából!</h2>
-<div class="container" style="margin-top: -10px;" >
+<h1 style="text-align: center; background-color: darkblue; color: white; height: 55px; padding-top: 5px">
+    Üdvözöljük!</h1>
+<h2 style="position: fixed; bottom: 165px; color: darkblue; font-size: 31px">Kérjük olvassa le a Terméket, vagy
+    válasszon a listából!</h2>
+<div class="container" style="margin-top: -10px;">
     <div class="row">
         <div class="col-6"
              style="border-top: 3px solid darkblue;border-right: 3px solid darkblue; border-bottom: 3px solid darkblue; position: fixed; left: 0; background-color: whitesmoke; height: 470px">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
                     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                    crossorigin="anonymous"></script>
+                    crossorigin="anonymous">
+            </script>
+            <script>
+                let readRow = '';
+                let lastEventTime = performance.now();
+                document.addEventListener('keydown', function (evt) {
+                    if (performance.now() - lastEventTime > 50) {
+                        readRow = evt.key;
+                        lastEventTime = performance.now();
+                        //window.alert(readRow);
+                    } else {
+                        readRow += evt.key;
+                        lastEventTime = performance.now();
+                        //document.write(readRow);
+                    }
+                    if (evt.code === 'Enter' && readRow.toString().length >= 13) {
+                        let length = readRow.length;
+                        readRow = readRow.toString().substring(0, length - 5)
+                        sendPost(readRow);
+                        //window.alert(readRow);
+                    }
+                });
+
+                function sendPost(readRow) {
+                    var data = '{' +
+                        '"vonalkod":' + '"' + readRow + '"' + ',' +
+                        '"mennyiseg":"1"' +
+                        '}';
+                    var xhr = new XMLHttpRequest();
+                    xhr.open("POST", "/kassza/js/" + document.getElementById('kosarIdJs').value);
+                    xhr.setRequestHeader("Accept", "application/json");
+                    xhr.setRequestHeader("Content-Type", "application/json")
+                    xhr.send(data);
+                }
+            </script>
             <table class="list-group">
                 <thead>
                 <tr style="font-size: 30px;">
@@ -242,7 +279,8 @@
                 </tr>
                 </thead>
                 <tbody class="list-group2">
-                <tr th:each="termekmennyiseg, iter : ${kosar.getTermekMennyisegDtoList()}" style="border-right: 1px solid darkblue"
+                <tr th:each="termekmennyiseg, iter : ${kosar.getTermekMennyisegDtoList()}"
+                    style="border-right: 1px solid darkblue"
                     th:style="${iter.index % 2 == 0} ? 'background-color:#fff' : 'background-color:whitesmoke'">
                     <th style="width: 150px" scope="col" th:text="${termekmennyiseg.nev}">Termék neve</th>
                     <th style="width: 100px" scope="col" th:text="${termekmennyiseg.ar}">Ár</th>
@@ -283,6 +321,9 @@
             <hr>
             <h3 th:text="${isTermekMennyisegEdit} ? 'Termék mennyiség módosítás' : 'Új termék hozzáadása'">Új termék
                 hozzáadása</h3>
+            <form action="#">
+                <input type="hidden" id="kosarIdJs" th:value="${kosar.kosarId}">
+            </form>
             <form class="row"
                   th:action="${isTermekMennyisegEdit} ? @{'/kassza/{kosarId}/modosit' (kosarId=${kosar.kosarId})} : @{'/kassza/{kosarId}/addtermek' (kosarId=${kosar.kosarId})}"
                   method="post"
@@ -290,7 +331,8 @@
             >
                 <div class="col">
                     <label>
-                        <select th:field="*{vonalkod}" class="form-select" style="color: darkblue" th:hidden="${isTermekMennyisegEdit}">
+                        <select th:field="*{vonalkod}" class="form-select" style="color: darkblue"
+                                th:hidden="${isTermekMennyisegEdit}">
                             <option th:selected="${type.vonalkod == termekMennyisegHozzaadasCommand.vonalkod}"
                                     th:each="type : ${allTermek}"
                                     th:value="${type.vonalkod}"
@@ -325,7 +367,7 @@
         <div class="col-3"
              style="font-size: 50px;text-align: center;border: 3px solid darkblue; background-color: whitesmoke; border-right: whitesmoke; position: fixed; right: 0; height: 300px; padding-top: 100px"
              th:text="${kosar.getTermekMennyisegDtoList().size() == 0} ? 'Termék neve' : ${kosar.getTermekMennyisegDtoList().get(0).getNev()} + ' ' + ${kosar.getTermekMennyisegDtoList().get(0).getMennyiseg()} + ' db'">
-             <!--th:text="${kosar.getUtolsoHozzaadottTermekmennyisegDto() == null} ? 'Aktuálisan hozzáadott termék képe' : ${kosar.getUtolsoHozzaadottTermekmennyisegDto().getNev()} + ' ' + ${kosar.getUtolsoHozzaadottTermekmennyisegDto().getMennyiseg()} + ' db'"> -->
+            <!--th:text="${kosar.getUtolsoHozzaadottTermekmennyisegDto() == null} ? 'Aktuálisan hozzáadott termék képe' : ${kosar.getUtolsoHozzaadottTermekmennyisegDto().getNev()} + ' ' + ${kosar.getUtolsoHozzaadottTermekmennyisegDto().getMennyiseg()} + ' db'"> -->
         </div>
     </div>
     <div class="row" style="text-align: center; font-size: 30px">
@@ -339,19 +381,23 @@
         </div>
         <div class="col-2" style="text-align: center; font-size: 30px">
             <form th:action="@{'/kassza/fizetes/{kosarId}'(kosarId=${kosar.kosarId})}" method="get">
-                <input th:disabled="${kosar.getTermekMennyisegDtoList().size() == 0}" type="submit" class="button-76" style="font-size:23px; position: fixed; bottom: 0;right: 0; width: 250px;height: 150px;"
+                <input th:disabled="${kosar.getTermekMennyisegDtoList().size() == 0}" type="submit" class="button-76"
+                       style="font-size:23px; position: fixed; bottom: 0;right: 0; width: 250px;height: 150px;"
                        value="Számlához"/>
             </form>
         </div>
         <div class="col-2">
             <div th:if="${kosar.getTermekMennyisegDtoList().size() == 0}">
                 <form th:action="@{'/kassza/torles/{kosarId}'(kosarId=${kosar.kosarId})}" method="post">
-                    <input type="submit" class="button-76" style="position: fixed; bottom: 0;left: 0; height: 150px; width: 250px" value="Vissza"/>
+                    <input type="submit" class="button-76"
+                           style="position: fixed; bottom: 0;left: 0; height: 150px; width: 250px" value="Vissza"/>
                 </form>
             </div>
             <!-- Button trigger modal -->
             <div th:if="${kosar.getTermekMennyisegDtoList().size() > 0}">
-                <button type="button" class="button-76" style="position: fixed; bottom: 0;left: 0; height: 150px; width: 250px" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                <button type="button" class="button-76"
+                        style="position: fixed; bottom: 0;left: 0; height: 150px; width: 250px" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdrop">
                     Vissza
                 </button>
             </div>
